# TRI_catkin_ws

./: README.md  RealsenseSN.txt  RunCams.sh  T_C2_C1.npy  runCamera.sh  test.csv
.catkin_tools/profiles/default/: devel_collisions.txt
CalibrationMatrices/: C1_T_C2.csv  C2_T_C1.csv  O_T_C1.csv  O_T_C2.csv
CalibrationMatrices/safe/: O_T_C1.csv  O_T_C2.csv
devel/: .catkin  .rosinstall  setup.sh
devel/include/realsense2_camera/: Extrinsics.h  IMUInfo.h
devel/include/robotiq_2f_gripper_control/: Robotiq2FGripper_robot_input.h  Robotiq2FGripper_robot_output.h
devel/include/robotiq_3f_gripper_articulated_msgs/: Robotiq3FGripperRobotInput.h  Robotiq3FGripperRobotOutput.h
devel/include/robotiq_3f_gripper_control/: Robotiq3FGripperConfig.h
devel/include/robotiq_ft_sensor/: ft_sensor.h  sensor_accessorRequest.h  sensor_accessorResponse.h
devel/include/ur_msgs/: Analog.h  Digital.h  FollowCartesianTrajectoryAction.h  FollowCartesianTrajectoryActionFeedback.h  FollowCartesianTrajectoryActionGoal.h  FollowCartesianTrajectoryActionResult.h  FollowCartesianTrajectoryFeedback.h  FollowCartesianTrajectoryGoal.h  FollowCartesianTrajectoryResult.h  GripperMove.h  GripperMoveRequest.h  GripperMoveResponse.h  IOStates.h  MasterboardDataMsg.h  RobotStateRTMsg.h  SetIORequest.h  SetIOResponse.h  SetPayloadRequest.h  SetPayloadResponse.h  ToolDataMsg.h
devel/include/vision_based_picking/: Acquire.h  AcquireRequest.h  AcquireResponse.h  Calibrate.h  CalibrateRequest.h  CalibrateResponse.h
devel/lib/demo_bdml/: Experiment  listener  talker
devel/lib/object_based_picking/: pick
devel/lib/pkgconfig/: demo_bdml.pc  object_based_picking.pc  realsense2_camera.pc  realsense2_description.pc  robotiq_2f_140_gripper_visualization.pc  robotiq_2f_85_gripper_visualization.pc  robotiq_2f_c2_gripper_visualization.pc  robotiq_2f_gripper_action_server.pc  robotiq_2f_gripper_control.pc  robotiq_3f_gripper_articulated_gazebo.pc  robotiq_3f_gripper_articulated_gazebo_plugins.pc  robotiq_3f_gripper_articulated_msgs.pc  robotiq_3f_gripper_control.pc  robotiq_3f_gripper_joint_state_publisher.pc  robotiq_3f_gripper_visualization.pc  robotiq_ethercat.pc  robotiq_ft_sensor.pc  (+12 more)
image_proc_scripts/: CloudFilteringAndStitching.py  FindRobotiqLedCam1.py  FindRobotiqLedCam2.py  PointCloud1.pcd  PointCloud2.pcd  PointCloud3.pcd  PointCloudS.pcd  Segmented_Scene_Camera2.pcd  Whole_Scene_Camera2.pcd  conversion_result.pcd  lib_cloud_conversion_between_Open3D_and_ROS.py
logs/realsense2_camera/: build.cmake.000.log.stderr  build.cmake.002.log.stderr
logs/robotiq_ft_sensor/: build.make.000.log.stderr
logs/ur_kinematics/: build.make.000.log.stderr  build.make.001.log.stderr
src/camera_calibration/: CMakeLists.txt  package.xml
src/dbot_ros_msgs/: CMakeLists.txt  package.xml
src/dbot_ros_msgs/msg/: ObjectOri.msg  ObjectState.msg  ObjectsState.msg
src/dbot_ros_msgs/srv/: FindObject.srv  RunObjectTracker.srv
src/demo_bdml/: CMakeLists.txt
src/object_meshes/: CMakeLists.txt  package.xml
src/universal_robot/ur_driver/: CMakeLists.txt  prog
src/universal_robot/ur_driver/include/: URcontrolV2.h  roboticArm.h
src/universal_robot/ur_driver/src/: URcontrolV2.cpp  roboticArm.cpp  test_move.cpp  test_pick_place.cpp
src/universal_robot/ur_driver/src/ur_driver/: driver.py
src/vision_based_picking/: CMakeLists.txt
(+205 files in other folders)
